# nhentai_scrapper

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
download_manager/: __init__.py  download_path.py  downloader.py  nHentaiScraper.py  pdfconvert.py
nHentai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
nhentai_scrapper/: main.py
nhentai_scrapper/download_manager/: download_path.py  downloader.py  pdfconvert.py
